--- a/wafs/package.json
+++ b/wafs/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/dorusth/performance-matters-1819#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "handlebars": "^4.1.0",
