--- a/wafs/package.json
+++ b/wafs/package.json
@@ -23,10 +23,13 @@
   "homepage": "https://github.com/dorusth/performance-matters-1819#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "handlebars": "^4.1.0",
+    "minify": "^4.1.1",
+    "node-gzip": "^1.1.2",
     "nodemon": "^1.18.10",
     "redis": "^2.8.0",
     "request": "^2.88.0"
