--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
+	"start": "node index.js",
     "dev": "nodemon index.js"
   },
   "repository": {
